<resources>
    <string name="app_name">My Application</string>
    <string name="expense_tracker">Expen$e T₹acker</string>
    <string name="existing_user">Existing user?</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="signup">Signup</string>
    <string name="logo">LOGO</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_income">Enter Income</string>
    <string name="enter_password_min_8">Enter Password (min 8 )</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="expen_e_t_acker">Expen$e T₹acker</string>

    <string name="hello">Hello,</string>
    <string name="view_statistics">View Statisitics</string>
    <string name="username">UserName</string>
    <string name="how_can_we_help_you_today">How can we help you today?</string>
    <string name="view_income">View Income</string>
    <string name="view_expenses">View Expenses</string>
    <string name="log_out">Log out?</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="expenses">Expenses</string>
    <string name="add_expense">+ Add Expense</string>
    <string name="list_of_expenses">List of Expenses</string>
    <string name="expense_description">Expense Description</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="ifb">IFB</string>
    <string name="balance_amount">Balance Amount:</string>
    <string name="amount_spend">Amount Spend:</string>
    <string name="income">Income</string>
    <string name="update_income">Update Income</string>
    <string name="monthly_income">Monthly Income:</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="spend_smarter_save_more">Spend Smarter,Save More</string>

</resources>