<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".IncomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="112dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/ifb"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.288" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="112dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/ifb"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintVertical_bias="0.283" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="230dp"
            android:layout_height="53dp"
            android:text="@string/balance_amount"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="230dp"
            android:layout_height="53dp"
            android:layout_marginStart="16dp"
            android:text="@string/amount_spend"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093" />

        <Button
            android:id="@+id/button10"
            android:layout_width="226dp"
            android:layout_height="65dp"
            android:text="@string/update_income"
            android:backgroundTint="@android:color/black"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.404" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="230dp"
            android:layout_height="53dp"
            android:text="@string/monthly_income"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="112dp"
            android:layout_height="56dp"
            android:layout_marginStart="22dp"
            android:gravity="center"
            android:text="@string/ifb"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.189" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>