<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">


        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="248dp"
            android:layout_height="51dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.514"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="56dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/enter_password"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.715"
            app:srcCompat="@drawable/password"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:contentDescription="@string/enter_email"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/mail" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textSize="29sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="334dp"
            android:layout_height="77dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="58dp"
            android:layout_height="41dp"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22"
            app:srcCompat="@drawable/people"
            tools:ignore="ContentDescription,MissingConstraints" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="248dp"
            android:layout_height="51dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_income"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
            app:layout_constraintVertical_bias="0.22" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="55dp"
            android:layout_height="54dp"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.692"
            app:srcCompat="@drawable/income"
            tools:ignore="ContentDescription,MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="-16dp" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="248dp"
            android:layout_height="51dp"
            android:layout_marginStart="28dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_password_min_8"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/textView4"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="Autofill" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>